[project]
name = "helm-api"
version = "0.0.0"
description = "FastAPI backend for Helm, deployed to AWS Lambda via Mangum"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "mangum>=0.19.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "reportlab>=4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "uvicorn>=0.30.0",
    "freezegun>=1.5.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
